# pcb-tracer

./: .gitignore  CMakeLists.txt  ColorBox.cpp  ColorBox.h  CommunicationHub.h  Component.cpp  Component.h  ComponentDrawingTool.cpp  ComponentDrawingTool.h  Config.cpp  Config.h  ConfigDialog.cpp  ConfigDialog.h  ConnectionAnalyzer.cpp  ConnectionAnalyzer.h  Editor.cpp  Editor.h  GuideTool.cpp  GuideTool.h  IEditorTool.h  ImageLayer.cpp  ImageLayer.h  ImageTransformTool.cpp  ImageTransformTool.h  LayerAlignmentTool.cpp  LayerAlignmentTool.h  Link.cpp  Link.h  MainWindow.cpp  MainWindow.h  Node.cpp  Node.h  NotesTool.cpp  NotesTool.h  QGraphicsItemLayer.cpp  QGraphicsItemLayer.h  SceneLoader.cpp  SceneLoader.h  SceneLoaderBinary.cpp  SceneLoaderBinary.h  (+12 more)
.github/workflows/: build-linux.yml  build-windows.yml
actions/: AddComponent.cpp  AddComponent.h  AddTrack.cpp  AddTrack.h  AdjustPerspective.cpp  AdjustPerspective.h  AlignLayer.cpp  AlignLayer.h  AssignSideToTrack.cpp  AssignSideToTrack.h  DeleteTrack.cpp  DeleteTrack.h  DeleteTrack.py  MoveNode.cpp  MoveNode.h
